@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install postinst prepare prerm setup test
-DEPEND=virtual/python-imaging[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_python3_2(-)?,python_targets_python3_3(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_python3_2(-),-python_single_target_python3_3(-)] postgres? ( dev-python/psycopg:2[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_python3_2(-)?,python_targets_python3_3(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_python3_2(-),-python_single_target_python3_3(-)] ) mysql? ( >=dev-python/mysql-python-1.2.3[python_targets_python2_6(-)?,-python_single_target_python2_6(-),python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) doc? ( >=dev-python/sphinx-1.0.7[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_python3_2(-)?,python_targets_python3_3(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_python3_2(-),-python_single_target_python3_3(-)] ) test? ( python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6[sqlite] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[sqlite] ) python_targets_python3_2? ( >=dev-lang/python-3.2.5-r2:3.2[sqlite] ) python_targets_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3[sqlite] ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_python3_2(-)?,python_targets_python3_3(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_python3_2(-),-python_single_target_python3_3(-)] ) userland_GNU? ( >=sys-apps/coreutils-8.5 ) python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6[sqlite?] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[sqlite?] ) python_targets_python3_2? ( >=dev-lang/python-3.2.5-r2:3.2[sqlite?] ) python_targets_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3[sqlite?] ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_python3_2(-)?,python_targets_python3_3(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_python3_2(-),-python_single_target_python3_3(-)] >=app-admin/webapp-config-1.50.15
-DESCRIPTION=High-level Python web framework
-EAPI=5
-HOMEPAGE=http://www.djangoproject.com/ http://pypi.python.org/pypi/Django
-IUSE=doc mysql postgres sqlite test python_targets_python2_6 python_targets_python2_7 python_targets_python3_2 python_targets_python3_3
-KEYWORDS=~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos
-LICENSE=BSD
-RDEPEND=virtual/python-imaging[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_python3_2(-)?,python_targets_python3_3(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_python3_2(-),-python_single_target_python3_3(-)] postgres? ( dev-python/psycopg:2[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_python3_2(-)?,python_targets_python3_3(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_python3_2(-),-python_single_target_python3_3(-)] ) mysql? ( >=dev-python/mysql-python-1.2.3[python_targets_python2_6(-)?,-python_single_target_python2_6(-),python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6[sqlite?] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[sqlite?] ) python_targets_python3_2? ( >=dev-lang/python-3.2.5-r2:3.2[sqlite?] ) python_targets_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3[sqlite?] ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_python3_2(-)?,python_targets_python3_3(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_python3_2(-),-python_single_target_python3_3(-)] >=app-admin/webapp-config-1.50.15
-REQUIRED_USE=|| ( python_targets_python2_6 python_targets_python2_7 python_targets_python3_2 python_targets_python3_3 )
-SLOT=0
-SRC_URI=https://www.djangoproject.com/m/releases/1.5/Django-1.5.1.tar.gz
-_eclasses_=bash-completion-r1	d339dd40b2014cf1edba8592580eef42	distutils-r1	6216c7baa73ce2ae738ea0466ffcd025	eutils	4878e7f88afc0ba0866ac112190b0fd4	multibuild	56d4120419072116417e8de1bd1040ff	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	67154e3c80516dc77f9f56956f5beebe	python-r1	cd956d5a4bac2209a64d0f4851cc115d	python-utils-r1	49ee0ca5e1019d8f256a23692dad2642	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	a8a3963967d6140be9a14b08bb8f047f	webapp	25b9b1696f5e698711f47d45c3d45e3e
-_md5_=ab9220aeca07079f95530ad4da5f7b3e
